--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,13 +23,9 @@ keys:
 
 - run:
 name: install dependencies
-command: |
-python3 -m venv venv
-. venv/bin/activate
-make install
-# Install hadolint
+command: 'python3 -m venv venv && venv/bin/activate && make install &&\
 wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
-chmod +x /bin/hadolint
+chmod +x /bin/hadolint'
 - save_cache:
 paths:
 - ./venv
@@ -38,6 +34,4 @@ key: v1-dependencies-{{ checksum "requirements.txt" }}
 # run lint!
 - run:
 name: run lint
-command: |
-. venv/bin/activate
-make lint 
+command: 'venv/bin/activate && make lint' 
