--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
               python3 -m venv venv
               . venv/bin/activate
               make install
-              # Install hadolint
+              # Install pylint and hadolint
               pip install pylint
               wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
               chmod +x /bin/hadolint
